Sửa cái get role nhưng chưa hoàn thiện, phân lại file