@@ -1,9 +1,9 @@
 package com.auction.client.controller;
 
+import com.auction.client.controller.common.AuctionStatusHelper;
 import com.auction.client.service.ItemsService;
 import com.auction.client.service.NetworkService;
 import com.auction.client.service.ToastService;
-import com.auction.client.util.AppConfig;
 import com.auction.client.util.ClientImageUtil;
 import com.auction.client.util.UserSession;
 import com.auction.shared.message.ResponseMessage;
@@ -33,123 +33,77 @@ import javafx.scene.shape.Circle;
 import javafx.scene.shape.Rectangle;
 import javafx.util.Duration;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
-import java.util.Comparator;
 import java.util.List;
 
 public class ItemPageController implements NetworkService.MessageListener {
-    private static final double IMAGE_WIDTH = 700.0;
+
+    // constants
+    private static final double IMAGE_WIDTH  = 700.0;
     private static final double IMAGE_HEIGHT = 450.0;
-    private static final double IMAGE_ARC = 20.0;
-    private static final double THUMB_WIDTH = 80.0;
+    private static final double IMAGE_ARC    = 20.0;
+    private static final double THUMB_WIDTH  = 80.0;
     private static final double THUMB_HEIGHT = 60.0;
-    private final long AUTO_BID_DELAY = 50;
 
+    // ── FXML fields
+    @FXML private Label     itemNameLabel;
+    @FXML private Label     itemDesLabel;
+    @FXML private ImageView itemImage;
+    @FXML private Label     sellerLabel;
+    @FXML private Label     currentPriceLabel;
+    @FXML private Label     startPriceLabel;
+    @FXML private Label     bidStepLabel;
+    @FXML private Label     startTimeLabel;
+    @FXML private Label     endTimeLabel;
 
-    // item information
-    @FXML
-    private Label itemNameLabel;
-    @FXML
-    private Label itemDesLabel;
-    @FXML
-    private ImageView itemImage;
-    @FXML
-    private Label sellerLabel;
-    @FXML
-    private Label currentPriceLabel;
-    @FXML
-    private Label startPriceLabel;
-    @FXML
-    private Label bidStepLabel;
-    @FXML
-    private Label startTimeLabel;
-    @FXML
-    private Label endTimeLabel;
+    @FXML private TextField bidAmountField;
+    @FXML private Button    submitBid;
+    @FXML private Label     minimumBidLabel;
+    @FXML private Button    btnSuggestStep1;
+    @FXML private Button    btnSuggestStep2;
 
-    // BID CONTROL
-    @FXML
-    private TextField bidAmountField;
-    @FXML
-    private Button submitBid;
-    @FXML
-    private Label minimumBidLabel;
-    @FXML
-    private Button btnSuggestStep1;
-    @FXML
-    private Button btnSuggestStep2;
+    @FXML private VBox      historyBidContainer;
+    @FXML private Label     totalBidsLabel;
+    @FXML private Hyperlink viewAllBidsLink;
 
-    // BID HISTORY
-    @FXML
-    private VBox historyBidContainer;
-    @FXML
-    private Label totalBidsLabel;
-    @FXML
-    private Hyperlink viewAllBidsLink;
+    @FXML private HBox      thumbnailContainer;
 
+    @FXML private VBox      autoBidForm;
+    @FXML private VBox      autoBidActiveStatus;
+    @FXML private TextField maxBidField;
+    @FXML private TextField autoBidStepField;
+    @FXML private Label     userCurrentBidLabel;
+    @FXML private Button    btnAutoBidToggle;
 
-    // IMAGE THUMBNAIL
-    @FXML
-    private HBox thumbnailContainer;
+    @FXML private Label     timeStatusLabel;
+    @FXML private Label     daysLabel;
+    @FXML private Label     hoursLabel;
+    @FXML private Label     minsLabel;
+    @FXML private Label     secsLabel;
 
-    // AUTO BID
-    @FXML
-    private VBox autoBidForm;
-    @FXML
-    private VBox autoBidActiveStatus;
-    @FXML
-    private TextField maxBidField;
-    @FXML
-    private TextField autoBidStepField;
-    @FXML
-    private Label userCurrentBidLabel;
-    @FXML
-    private Button btnAutoBidToggle;
+    @FXML private VBox      bidControlsContainer;
+    @FXML private StackPane statusOverlay;
+    @FXML private Label     statusMessageLabel;
 
-    // COUNTDOWN TIMER
-    @FXML
-    private Label timeStatusLabel;
-    @FXML
-    private Label daysLabel;
-    @FXML
-    private Label hoursLabel;
-    @FXML
-    private Label minsLabel;
-    @FXML
-    private Label secsLabel;
-
-    //STATUS OVERLAY
-    @FXML
-    private VBox bidControlsContainer;
-    @FXML
-    private StackPane statusOverlay;
-    @FXML
-    private Label statusMessageLabel;
-
-
-    private String itemId;
-    private final ItemsService itemsService = ItemsService.getInstance();
-    private Item item;
+    // State
+    private String   itemId;
+    private Item     item;
     private Timeline timeline;
-    private double myLastBid = 0.0;
+    private double   myLastBid    = 0.0;
+    private boolean  isAutoBidActive   = false;
+    private double   maxBidAmount      = 0;
+    private double   autoBidIncremental = 0;
+    private String   lastBidderId  = "";
 
-    private final User user = UserSession.getInstance().getLoggedInUser();
-    private NetworkService network = NetworkService.getInstance();
-    private Gson gson = GsonUtil.getInstance();
+    // Dependencies
+    private final ItemsService   itemsService = ItemsService.getInstance();
+    private final User           user         = UserSession.getInstance().getLoggedInUser();
+    private final NetworkService network      = NetworkService.getInstance();
+    private final Gson           gson         = GsonUtil.getInstance();
 
-    // Auto Bid
-    private boolean isAutoBidActive = false;
-    private double maxBidAmount = 0;
-    private double autoBidIncremental = 0;
-    private long lastAutoBidTime = 0;
-    private String lastBidderId = "";
-
-
+    //  Lifecycle
     @FXML
     public void initialize() {
         try {
@@ -157,51 +111,41 @@ public class ItemPageController implements NetworkService.MessageListener {
             clip.setArcWidth(IMAGE_ARC);
             clip.setArcHeight(IMAGE_ARC);
             itemImage.setClip(clip);
-
             itemImage.setFitWidth(IMAGE_WIDTH);
             itemImage.setFitHeight(IMAGE_HEIGHT);
             itemImage.setPreserveRatio(false);
-
             itemImage.imageProperty().addListener((obs, oldImg, newImg) -> {
-                if (newImg != null) {
-                    applyObjectFitCover(newImg);
-                }
+                if (newImg != null) applyObjectFitCover(newImg);
             });
         } catch (Exception e) {
             e.printStackTrace();
-            throw new RuntimeException("Error initializing ItemPageController: " + e.getMessage());
         }
-
     }
 
+    // Data loading
     public void setItemId(String id) {
         this.itemId = id;
-
-        String currentUserId = user.getId();
-        itemsService.getItemById(id, currentUserId)
-                .thenAccept(item -> {
-                    Platform.runLater(() -> initData(item));})
+        itemsService.getItemById(id, user.getId())
+                .thenAccept(item -> Platform.runLater(() -> initData(item)))
                 .exceptionally(ex -> {
-                    Platform.runLater(() -> {System.err.println("Failed to load item");
+                    Platform.runLater(() -> {
                         ex.printStackTrace();
-                        ToastService.showError(
-                                itemNameLabel.getScene(), "Failed to load item data"
-                        );
+                        ToastService.showError(itemNameLabel.getScene(), "Failed to load item data");
                     });
-
                     return null;
                 });
     }
+
     public void initData(Item item) {
-        this.item = item;
-        this.myLastBid = item.getMyLastBid();
-        this.lastBidderId = item.getCurrentTopPLayerId();
+        this.item          = item;
+        this.myLastBid     = item.getMyLastBid();
+        this.lastBidderId  = item.getCurrentTopPLayerId();
 
-        item.setStatus(resolveRealtimeStatus());
+        String status = resolveRealtimeStatus();
+        item.setStatus(status);
+
         displayDataItem(item);
-
-        // cập nhật UI NGAY lập tức
-        updateUIByStatus();
+        updateUIByStatus(status);
         connectToRealTimeBidding();
         loadBidHistory();
 
@@ -213,108 +157,93 @@ public class ItemPageController implements NetworkService.MessageListener {
             statusMessageLabel.setText("You are the owner of this item");
         }
     }
-    // UI STATE MANAGEMENT
+
+    // UI state management
     private void updateUIByStatus() {
+        updateUIByStatus(resolveRealtimeStatus());
+    }
+
+    private void updateUIByStatus(String status) {
         if (item == null) return;
-        String status = resolveRealtimeStatus();
+
         item.setStatus(status);
-        boolean isOwner =
-                item.getSellerId().equals(user.getId());
+        boolean isOwner = item.getSellerId().equals(user.getId());
 
         bidControlsContainer.setVisible(false);
         bidControlsContainer.setManaged(false);
-
         statusOverlay.setVisible(true);
         statusOverlay.setManaged(true);
-
         statusMessageLabel.getStyleClass().removeAll("status-ended", "status-upcoming");
+
         if (isOwner) {
-            statusMessageLabel.setText("👤 You are the owner of this item"
-            );
+            statusMessageLabel.setText("👤 You are the owner of this item");
             return;
         }
 
         switch (status.toUpperCase()) {
-            case "ONGOING":
+            case "ONGOING" -> {
                 bidControlsContainer.setVisible(true);
                 bidControlsContainer.setManaged(true);
                 statusOverlay.setVisible(false);
                 statusOverlay.setManaged(false);
-                break;
-
-            case "UPCOMING":
+            }
+            case "UPCOMING" -> {
                 statusMessageLabel.setText("⏳ This auction hasn't started yet");
                 statusMessageLabel.getStyleClass().add("status-upcoming");
-                break;
-
-            case "ENDED":
+            }
+            case "ENDED" -> {
                 statusMessageLabel.setText("🚫 This auction has ended");
                 statusMessageLabel.getStyleClass().add("status-ended");
-                break;
+            }
         }
     }
 
-    // REALTIME BIDDING
+    // Realtime bidding
     private void connectToRealTimeBidding() {
         network.setListener(this);
-
-        String userId = UserSession.getInstance().getLoggedInUser().getId();
-        String itemId = item.getId();
-        boolean connected = network.connectToAuctionRoom(itemId, userId);
-        if (connected) {
-            System.out.println("Connected to auction room for item: " + itemId);
-        } else {
-            System.err.println("Failed to connect to auction room for item: " + itemId);
-        }
+        boolean connected = network.connectToAuctionRoom(item.getId(), user.getId());
+        if (!connected) System.err.println("Failed to connect to auction room: " + item.getId());
     }
 
     @Override
     public void onMessageReceived(ResponseMessage response) {
-        System.out.println(response);
         Platform.runLater(() -> {
-            if ("success".equals(response.getStatus()) && "NEW_BID".equals(response.getMessage())) {
-                JsonElement jsonElement = gson.toJsonTree(response.getData());
-                BidPayload bidPayload = gson.fromJson(jsonElement, BidPayload.class);
-                if (bidPayload != null) {
-                    System.out.println("Received new bid update: " + jsonElement);
-                    this.lastBidderId = bidPayload.getUserId();
-                    item.setCurrentTopPLayerId(bidPayload.getUserId());
-                    item.setCurrentPrice(bidPayload.getBidPrice());
+            if (!"success".equals(response.getStatus()) || !"NEW_BID".equals(response.getMessage())) return;
 
-                    currentPriceLabel.setText(String.format("$ %.0f", item.getCurrentPrice())
-                    );
-                    updateUIByStatus();
+            JsonElement jsonElement = gson.toJsonTree(response.getData());
+            BidPayload  bidPayload  = gson.fromJson(jsonElement, BidPayload.class);
 
-                    if (user.getId().equals(bidPayload.getUserId())) {
-                        myLastBid = bidPayload.getBidPrice();
-                    }
-                    updateMinimumBidLabel();
-                    handleAutoBidLogic(bidPayload.getBidPrice(), bidPayload.getUserId());
-                    loadBidHistory();
-                } else {
-                    System.err.println("Failed to parse updated item from response: " + jsonElement);
-                }
-            } else {
-                System.out.println("Received message: " + response.getMessage());
+            if (bidPayload == null) {
+                System.err.println("Failed to parse BidPayload: " + jsonElement);
+                return;
             }
+
+            lastBidderId = bidPayload.getUserId();
+            item.setCurrentTopPLayerId(bidPayload.getUserId());
+            item.setCurrentPrice(bidPayload.getBidPrice());
+
+            if (user.getId().equals(bidPayload.getUserId())) {
+                myLastBid = bidPayload.getBidPrice();
+            }
+
+            currentPriceLabel.setText(String.format("$ %.0f", item.getCurrentPrice()));
+            updateUIByStatus(resolveRealtimeStatus());
+            updateMinimumBidLabel();
+            handleAutoBidLogic(bidPayload.getBidPrice(), bidPayload.getUserId());
+            loadBidHistory();
         });
     }
 
+    // Bid actions
+    @FXML
     public void bidHandle() {
         String status = resolveRealtimeStatus();
-
         if (!"ONGOING".equalsIgnoreCase(status)) {
-            ToastService.showError(
-                    bidAmountField.getScene(),
-                    "Auction is not active."
-            );
+            ToastService.showError(bidAmountField.getScene(), "Auction is not active.");
             return;
         }
         if (user.getId().equals(item.getCurrentTopPLayerId())) {
-            ToastService.showInfo(
-                    bidAmountField.getScene(),
-                    "You are already the highest bidder."
-            );
+            ToastService.showInfo(bidAmountField.getScene(), "You are already the highest bidder.");
             return;
         }
 
@@ -323,11 +252,10 @@ public class ItemPageController implements NetworkService.MessageListener {
             ToastService.showInfo(bidAmountField.getScene(), "Please enter a bid amount.");
             return;
         }
-        try {
-            double bidAmount = Double.parseDouble(inputAmount);
-            double minRequired = item.getCurrentPrice() + item.getBidStep();
 
-            // Kiểm tra logic giá trước khi gửi lên server để giảm tải
+        try {
+            double bidAmount  = Double.parseDouble(inputAmount);
+            double minRequired = item.getCurrentPrice() + item.getBidStep();
             if (bidAmount < minRequired) {
                 ToastService.showError(bidAmountField.getScene(),
                         String.format("Bid must be at least $ %.1f", minRequired));
@@ -343,35 +271,31 @@ public class ItemPageController implements NetworkService.MessageListener {
     @FXML
     private void handleSuggestStep1() {
         if (item == null) return;
-        double suggestedPrice = item.getCurrentPrice() + item.getBidStep();
-        bidAmountField.setText(String.format("%.0f", suggestedPrice));
+        bidAmountField.setText(String.format("%.0f", item.getCurrentPrice() + item.getBidStep()));
     }
 
     @FXML
     private void handleSuggestStep2() {
         if (item == null) return;
-        double suggestedPrice = item.getCurrentPrice() + (item.getBidStep() * 2);
-        bidAmountField.setText(String.format("%.0f", suggestedPrice));
+        bidAmountField.setText(String.format("%.0f", item.getCurrentPrice() + item.getBidStep() * 2));
     }
 
-    // AUTO BID
+    //Auto-bid
     @FXML
     private void toggleAutoBidForm() {
-        boolean isVisible = autoBidForm.isVisible();
-        autoBidForm.setVisible(!isVisible);
-        autoBidForm.setManaged(!isVisible);
+        boolean visible = autoBidForm.isVisible();
+        autoBidForm.setVisible(!visible);
+        autoBidForm.setManaged(!visible);
     }
 
     @FXML
     private void startAutoBid() {
-        String status = resolveRealtimeStatus();
-
-        if (!"ONGOING".equalsIgnoreCase(status)) {
+        if (!"ONGOING".equalsIgnoreCase(resolveRealtimeStatus())) {
             ToastService.showError(maxBidField.getScene(), "Auction is not active.");
             return;
         }
         try {
-            maxBidAmount = Double.parseDouble(maxBidField.getText().trim());
+            maxBidAmount       = Double.parseDouble(maxBidField.getText().trim());
             autoBidIncremental = Double.parseDouble(autoBidStepField.getText().trim());
 
             if (maxBidAmount <= item.getCurrentPrice()) {
@@ -383,7 +307,6 @@ public class ItemPageController implements NetworkService.MessageListener {
                         "Your step must be at least " + item.getBidStep());
                 return;
             }
-
             if (autoBidIncremental >= maxBidAmount) {
                 ToastService.showError(maxBidField.getScene(),
                         String.format("Increment ($ %.0f) must be less than Max bid ($ %.0f).",
@@ -391,10 +314,11 @@ public class ItemPageController implements NetworkService.MessageListener {
                 return;
             }
 
-            if (item.getCurrentPrice() + autoBidIncremental > maxBidAmount) {
+            double firstAutoBidPrice = item.getCurrentPrice() + autoBidIncremental;
+            if (firstAutoBidPrice > maxBidAmount) {
                 ToastService.showError(maxBidField.getScene(),
-                        String.format("First auto-bid would be $ %.0f, which exceeds your Max bid ($ %.0f). Please raise Max bid or lower your increment.",
-                                item.getCurrentPrice() + autoBidIncremental, maxBidAmount));
+                        String.format("First auto-bid ($ %.0f) exceeds Max bid ($ %.0f). Raise Max or lower increment.",
+                                firstAutoBidPrice, maxBidAmount));
                 return;
             }
 
@@ -404,27 +328,13 @@ public class ItemPageController implements NetworkService.MessageListener {
             ToastService.showSuccess(maxBidField.getScene(), "Auto-Bid activated!");
 
             boolean isLeading = user.getId().equals(lastBidderId);
-
             if (isLeading) {
-                // User đang dẫn đầu → chỉ hiển thị giá hiện tại của họ, không cần bid thêm
                 userCurrentBidLabel.setText(
                         String.format("Your current bid: $ %.0f (Leading)", item.getCurrentPrice()));
             } else {
-                // User KHÔNG phải người cao nhất → tự động đặt giá ngay lập tức
-                double firstAutoBidPrice = item.getCurrentPrice() + autoBidIncremental;
-
-                if (firstAutoBidPrice <= maxBidAmount) {
-                    // Giá auto-bid đầu tiên chưa vượt giới hạn → gửi bid
-                    network.sendBid(item.getId(), user.getId(), firstAutoBidPrice, "");
-                    userCurrentBidLabel.setText(
-                            String.format("Your current bid: $ %.0f (Auto-bidding...)", firstAutoBidPrice));
-                } else {
-                    // firstAutoBidPrice vượt maxBidAmount → không thể bid, dừng luôn
-                    stopAutoBid();
-                    ToastService.showError(maxBidField.getScene(),
-                            String.format("Max bid ($ %.0f) is too low to place even one bid. Min required: $ %.0f",
-                                    maxBidAmount, firstAutoBidPrice));
-                }
+                network.sendBid(item.getId(), user.getId(), firstAutoBidPrice, "");
+                userCurrentBidLabel.setText(
+                        String.format("Your current bid: $ %.0f (Auto-bidding...)", firstAutoBidPrice));
             }
 
         } catch (NumberFormatException e) {
@@ -436,78 +346,66 @@ public class ItemPageController implements NetworkService.MessageListener {
     private void stopAutoBid() {
         isAutoBidActive = false;
         updateAutoBidUI(false);
-
     }
 
-    private void handleAutoBidLogic(double serverCurrentPrice, String lastBidderId) {
-        if (!"ONGOING".equalsIgnoreCase(resolveRealtimeStatus())) {
-            stopAutoBid();
-            return;
-        }
+    private void handleAutoBidLogic(double serverCurrentPrice, String topBidderId) {
+        if (!"ONGOING".equalsIgnoreCase(resolveRealtimeStatus())) { stopAutoBid(); return; }
         if (!isAutoBidActive) return;
-        if (user.getId().equals(lastBidderId)) {
+
+        if (user.getId().equals(topBidderId)) {
             userCurrentBidLabel.setText(
                     String.format("Your current bid: $ %.0f (Leading)", serverCurrentPrice));
-
         } else if (serverCurrentPrice >= maxBidAmount) {
             stopAutoBid();
-            Platform.runLater(() ->
-                    ToastService.showInfo(userCurrentBidLabel.getScene(),
-                            "Auto-bid stopped: Max limit reached!")
-            );
+            ToastService.showInfo(userCurrentBidLabel.getScene(), "Auto-bid stopped: Max limit reached!");
         } else {
-            // User khác vừa bid cao hơn → server sẽ trigger auto-bid
-            if (myLastBid > 0) {
-                userCurrentBidLabel.setText(
-                        String.format("Your current bid: $ %.0f (Outbid — auto-bidding...)", myLastBid));
-            } else {
-                userCurrentBidLabel.setText("Auto-bidding...");
-            }
+            String text = myLastBid > 0
+                    ? String.format("Your current bid: $ %.0f (Outbid — auto-bidding...)", myLastBid)
+                    : "Auto-bidding...";
+            userCurrentBidLabel.setText(text);
         }
     }
+
     private void updateAutoBidUI(boolean active) {
         autoBidForm.setVisible(false);
         autoBidForm.setManaged(false);
-
         autoBidActiveStatus.setVisible(active);
         autoBidActiveStatus.setManaged(active);
-
         btnAutoBidToggle.setVisible(!active);
         btnAutoBidToggle.setManaged(!active);
         submitBid.setDisable(active || item.getSellerId().equals(user.getId()));
     }
 
-    // BID HISTORY
+    // Bid history
     private void loadBidHistory() {
         itemsService.getBidHistory(itemId)
-                .thenAccept(bids -> {
-                    Platform.runLater(() -> {
-                        renderBidHistory(bids);
-                    });
-                })
+                .thenAccept(bids -> Platform.runLater(() -> renderBidHistory(bids)))
                 .exceptionally(ex -> {
-                    Platform.runLater(() -> {
-                        ex.printStackTrace();
-                        ToastService.showError(historyBidContainer.getScene(), "Failed to load bid history");
-                    });
+                    ex.printStackTrace();
+                    Platform.runLater(() ->
+                            ToastService.showError(historyBidContainer.getScene(), "Failed to load bid history"));
                     return null;
                 });
     }
 
     private void renderBidHistory(List<BidTransaction> bids) {
         historyBidContainer.getChildren().clear();
+
         if (bids == null || bids.isEmpty()) {
             totalBidsLabel.setText("0 bids");
+            viewAllBidsLink.setVisible(false);
+            viewAllBidsLink.setManaged(false);
             return;
         }
 
-        int totalCount = bids.size();
+        int totalCount  = bids.size();
+        int displayLimit = Math.min(totalCount, 8);
         totalBidsLabel.setText(totalCount + " bids");
 
-        int displayLimit = Math.min(totalCount, 8);
         for (int i = 0; i < displayLimit; i++) {
             historyBidContainer.getChildren().add(createBidRow(i + 1, bids.get(i)));
         }
+
         boolean hasMore = totalCount > 8;
         viewAllBidsLink.setVisible(hasMore);
         viewAllBidsLink.setManaged(hasMore);
@@ -519,19 +417,22 @@ public class ItemPageController implements NetworkService.MessageListener {
         row.setAlignment(javafx.geometry.Pos.CENTER_LEFT);
         row.getStyleClass().add("history-row");
 
-        Label lblIndex = new Label(String.valueOf(index));
+        Label  lblIndex = new Label(String.valueOf(index));
         lblIndex.getStyleClass().add("history-index");
 
         Circle avatar = new Circle(15, Color.web("#e0e0e0"));
         if (bid.getBidderId().equals(user.getId())) avatar.setFill(Color.web("#2D55FF"));
 
-        VBox info = new VBox(2);
-        String name = bid.getBidderId().equals(user.getId()) ? bid.getBidderId() + " (You)" : bid.getBidderId();
-        Label lblName = new Label(name);
+        VBox   info    = new VBox(2);
+        String name    = bid.getBidderId().equals(user.getId())
+                ? bid.getBidderId() + " (You)" : bid.getBidderId();
+        Label  lblName = new Label(name);
         lblName.setStyle("-fx-font-weight: bold;");
 
-        Label lblTime = new Label(bid.getBidTime().format(DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm:ss")));
+        Label lblTime = new Label(bid.getBidTime().format(
+                DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm:ss")));
         lblTime.setStyle("-fx-text-fill: #888; -fx-font-size: 11px;");
+
         info.getChildren().addAll(lblName, lblTime);
         HBox.setHgrow(info, javafx.scene.layout.Priority.ALWAYS);
 
@@ -544,115 +445,84 @@ public class ItemPageController implements NetworkService.MessageListener {
 
     @FXML
     private void handleViewAllBids() {
-        System.out.println("Redirecting to full history for item: " + itemId);
+        // TODO: cần cung cấp FXML path của FullBidHistoryPage
+        System.out.println("[TODO] Navigate to full bid history for item: " + itemId);
     }
 
-
-    // DISPLAY & IMAGE HANDLING
+    // Display & image
     private void displayDataItem(Item item) {
         thumbnailContainer.getChildren().clear();
         List<String> images = item.getImagesPath();
 
         if (images != null && !images.isEmpty()) {
-            String mainImageUrl = images.get(0);
-            ClientImageUtil.displayImage(mainImageUrl, "images", itemImage, IMAGE_WIDTH * 2, IMAGE_HEIGHT * 2);
+            ClientImageUtil.displayImage(images.get(0), "images", itemImage,
+                    IMAGE_WIDTH * 2, IMAGE_HEIGHT * 2);
 
             boolean isFirst = true;
-
             for (String imgPath : images) {
-                if (imgPath == null || imgPath.trim().isEmpty()) continue;
+                if (imgPath == null || imgPath.isBlank()) continue;
+
                 StackPane thumbPane = new StackPane();
                 thumbPane.getStyleClass().add("thumbnail-container");
-                thumbPane.setMinWidth(80);
-                thumbPane.setMinHeight(60);
-                thumbPane.setMaxWidth(80);
-                thumbPane.setMaxHeight(60);
+                thumbPane.setMinWidth(THUMB_WIDTH);  thumbPane.setMaxWidth(THUMB_WIDTH);
+                thumbPane.setMinHeight(THUMB_HEIGHT); thumbPane.setMaxHeight(THUMB_HEIGHT);
+                if (isFirst) { thumbPane.getStyleClass().add("active-thumb"); isFirst = false; }
 
-                if (isFirst) {
-                    thumbPane.getStyleClass().add("active-thumb");
-                    isFirst = false;
-                }
                 ImageView thumbView = new ImageView();
-                thumbView.setFitWidth(80);
-                thumbView.setFitHeight(60);
-                thumbView.setPreserveRatio(true);
-
+                thumbView.setFitWidth(THUMB_WIDTH);
+                thumbView.setFitHeight(THUMB_HEIGHT);
                 thumbView.setPreserveRatio(false);
-
                 thumbView.imageProperty().addListener((obs, oldImg, newImg) -> {
-                    if (newImg != null) {
-                        applyObjectFitCoverToImageView(thumbView, newImg, THUMB_WIDTH, THUMB_HEIGHT);
-                    }
+                    if (newImg != null) applyObjectFitCoverToImageView(thumbView, newImg, THUMB_WIDTH, THUMB_HEIGHT);
                 });
                 ClientImageUtil.displayImage(imgPath, "images", thumbView, IMAGE_WIDTH, IMAGE_HEIGHT);
                 thumbPane.getChildren().add(thumbView);
 
                 thumbPane.setOnMouseClicked(e -> {
-                    Image clickedImage = thumbView.getImage();
-                    if (clickedImage != null) {
-                        itemImage.setImage(clickedImage);
-                    } else {
-                        ClientImageUtil.displayImage(imgPath, "images", itemImage, THUMB_WIDTH, THUMB_HEIGHT);
-                    }
-                    thumbnailContainer.getChildren().forEach(node -> {
-                        node.getStyleClass().remove("active-thumb");
-                    });
+                    Image clicked = thumbView.getImage();
+                    if (clicked != null) itemImage.setImage(clicked);
+                    else ClientImageUtil.displayImage(imgPath, "images", itemImage, THUMB_WIDTH, THUMB_HEIGHT);
+                    thumbnailContainer.getChildren().forEach(n -> n.getStyleClass().remove("active-thumb"));
                     thumbPane.getStyleClass().add("active-thumb");
                 });
+
                 thumbnailContainer.getChildren().add(thumbPane);
             }
         }
-        double minHeight = 100;
-        itemDesLabel.setMinHeight(minHeight);
+
+        itemDesLabel.setMinHeight(100);
         itemDesLabel.setText(item.getDescription());
         itemDesLabel.setWrapText(true);
         itemDesLabel.setMaxWidth(Double.MAX_VALUE);
         itemDesLabel.prefWidthProperty().bind(
                 itemDesLabel.getParent().layoutBoundsProperty().map(b -> b.getWidth())
         );
-
         itemDesLabel.setPrefHeight(Region.USE_COMPUTED_SIZE);
         itemDesLabel.setMinHeight(Region.USE_PREF_SIZE);
+
         itemNameLabel.setText(item.getName());
         sellerLabel.setText(item.getSellerId());
-        currentPriceLabel.setText(
-                String.format("$ %.0f", item.getCurrentPrice())
-        );
+        currentPriceLabel.setText(String.format("$ %.0f", item.getCurrentPrice()));
+        startPriceLabel.setText(String.format("$ %.0f", item.getStartingPrice()));
+        bidStepLabel.setText(String.format("$ %.0f", item.getBidStep()));
 
-        startPriceLabel.setText(
-                String.format("$ %.0f", item.getStartingPrice())
-        );
+        DateTimeFormatter fmt = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
+        startTimeLabel.setText(item.getStartTime() != null ? item.getStartTime().format(fmt) : "N/A");
+        endTimeLabel.setText(item.getEndTime()     != null ? item.getEndTime().format(fmt)   : "N/A");
 
-        bidStepLabel.setText(
-                String.format("$ %.0f", item.getBidStep())
-        );
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
-        if (item.getStartTime() != null) {
-            startTimeLabel.setText(item.getStartTime().format(formatter));
-        } else {
-            startTimeLabel.setText("N/A");
-        }
-        if (item.getEndTime() != null) {
-            endTimeLabel.setText(item.getEndTime().format(formatter));
-        } else {
-            endTimeLabel.setText("N/A");
-        }
         if (btnSuggestStep1 != null) btnSuggestStep1.setText(String.format("$ %.0f", item.getBidStep()));
         if (btnSuggestStep2 != null) btnSuggestStep2.setText(String.format("$ %.0f", item.getBidStep() * 2));
+
         startCountdown();
         updateMinimumBidLabel();
     }
 
     private void updateMinimumBidLabel() {
-        if (item != null && minimumBidLabel != null) {
-            double minimumNextBid = item.getCurrentPrice() + item.getBidStep();
-
-            minimumBidLabel.setText(
-                    String.format("Your last bid: $ %.0f (Min next: $ %.0f)",
-                            myLastBid,
-                            minimumNextBid)
-            );
-        }
+        if (item == null || minimumBidLabel == null) return;
+        minimumBidLabel.setText(String.format(
+                "Your last bid: $ %.0f  (Min next: $ %.0f)",
+                myLastBid,
+                item.getCurrentPrice() + item.getBidStep()));
     }
 
     private void applyObjectFitCover(Image img) {
@@ -663,41 +533,33 @@ public class ItemPageController implements NetworkService.MessageListener {
         if (img == null || imageView == null) return;
         if (img.getProgress() < 1.0) {
             img.progressProperty().addListener((obs, oldVal, newVal) -> {
-                if (newVal.doubleValue() == 1.0) {
+                if (newVal.doubleValue() >= 1.0)
                     Platform.runLater(() -> applyObjectFitCoverToImageView(imageView, img, targetW, targetH));
-                }
             });
             return;
         }
         Platform.runLater(() -> {
-            double imgW = img.getWidth();
-            double imgH = img.getHeight();
-
+            double imgW = img.getWidth(), imgH = img.getHeight();
             if (imgW == 0 || imgH == 0) return;
 
             double targetRatio = targetW / targetH;
             double sourceRatio = imgW / imgH;
             double viewW, viewH, viewX, viewY;
+
             if (sourceRatio > targetRatio) {
-                viewH = imgH;
-                viewW = imgH * targetRatio;
-                viewX = (imgW - viewW) / 2;
-                viewY = 0;
+                viewH = imgH; viewW = imgH * targetRatio;
+                viewX = (imgW - viewW) / 2; viewY = 0;
             } else {
-                viewW = imgW;
-                viewH = imgW / targetRatio;
-                viewX = 0;
-                viewY = (imgH - viewH) / 2;
+                viewW = imgW; viewH = imgW / targetRatio;
+                viewX = 0; viewY = (imgH - viewH) / 2;
             }
             imageView.setViewport(new javafx.geometry.Rectangle2D(viewX, viewY, viewW, viewH));
         });
     }
 
-    // TIMER $ COUNTDOWN
+    //Timer & countdown
     private void startCountdown() {
-        if (timeline != null) {
-            timeline.stop();
-        }
+        if (timeline != null) timeline.stop();
         updateTimeDisplay();
         timeline = new Timeline(new KeyFrame(Duration.seconds(1), e -> updateTimeDisplay()));
         timeline.setCycleCount(Timeline.INDEFINITE);
@@ -708,51 +570,35 @@ public class ItemPageController implements NetworkService.MessageListener {
         if (item == null) return;
 
         String status = resolveRealtimeStatus();
-        LocalDateTime now = LocalDateTime.now();
-        LocalDateTime targetTime = null;
+        LocalDateTime now        = LocalDateTime.now();
+        LocalDateTime targetTime = "UPCOMING".equalsIgnoreCase(status) ? item.getStartTime()
+                : "ONGOING".equalsIgnoreCase(status) ? item.getEndTime() : null;
 
-        if ("UPCOMING".equalsIgnoreCase(status)) {
-            targetTime = item.getStartTime();
-        } else if ("ONGOING".equalsIgnoreCase(status)) {
-            targetTime = item.getEndTime();
-
-        }
         if (targetTime == null || now.isAfter(targetTime)) {
-            String realtimeStatus = resolveRealtimeStatus();
-            item.setStatus(realtimeStatus);
-            updateUIByStatus();
-            updateTimerLabels(0,0,0,0);
-            if (timeline != null) {
-                timeline.stop();
-            }
+            item.setStatus(status);
+            updateUIByStatus(status);
+            updateTimerLabels(0, 0, 0, 0);
+            if (timeline != null) timeline.stop();
             return;
         }
 
-        long days = ChronoUnit.DAYS.between(now, targetTime);
-        long hours = ChronoUnit.HOURS.between(now, targetTime) % 24;
-        long minutes = ChronoUnit.MINUTES.between(now, targetTime) % 60;
-        long seconds = ChronoUnit.SECONDS.between(now, targetTime) % 60;
-
-        updateTimerLabels(days, hours, minutes, seconds);
+        updateTimerLabels(
+                ChronoUnit.DAYS.between(now, targetTime),
+                ChronoUnit.HOURS.between(now, targetTime) % 24,
+                ChronoUnit.MINUTES.between(now, targetTime) % 60,
+                ChronoUnit.SECONDS.between(now, targetTime) % 60
+        );
     }
 
     private void updateTimerLabels(long d, long h, long m, long s) {
-        if (daysLabel != null) daysLabel.setText(String.format("%02d", d));
+        if (daysLabel  != null) daysLabel.setText(String.format("%02d", d));
         if (hoursLabel != null) hoursLabel.setText(String.format("%02d", h));
-        if (minsLabel != null) minsLabel.setText(String.format("%02d", m));
-        if (secsLabel != null) secsLabel.setText(String.format("%02d", s));
+        if (minsLabel  != null) minsLabel.setText(String.format("%02d", m));
+        if (secsLabel  != null) secsLabel.setText(String.format("%02d", s));
     }
     private String resolveRealtimeStatus() {
-        if (item == null) {
-            return "ENDED";
-        }
-        LocalDateTime now = LocalDateTime.now();
-        if (now.isBefore(item.getStartTime())) {
-            return "UPCOMING";
-        }
-        if (!now.isBefore(item.getEndTime())) {
-            return "ENDED";
-        }
-        return "ONGOING";
+        return AuctionStatusHelper.resolveUpperCase(
+                item != null ? item.getStartTime() : null,
+                item != null ? item.getEndTime()   : null);
     }
 }
